# human-regex

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: docs.yml
changelog.d/: 9.docs.md
documentation/: book.toml
src/human_regex/: __init__.py  byte_regex.py  bytes_regex.py  string_regex.py  utilities.py
src/human_regex/bases/: __init__.py  general_regex.py  re_proxy.py
src/human_regex/contracts/: abstract_regex.py  building_blocks.py  byte_regex.py  bytes_regex.py  general_regex.py  primitives.py  string_regex.py
tests/: test_byte_regex.py  test_bytes_regex.py  test_human_regex.py  test_string_regex.py
